Handle the exception of env file reading